--- a/src/station1.html
+++ b/src/station1.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html lang="ja">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Station 1</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Station 1</title>
 </head>
+
 <body>
+    <img src="./assets/image/railway-thumbnail.png" alt="">
+    <p><span>TechTrain</span>の使い方</p>
+    <p><span>TechBowl</span></p>
+    <p>Suguru Ohki</p>
+
 </body>
+
 </html>
