--- a/src/station6.html
+++ b/src/station6.html
@@ -1,1 +1,31 @@
 <!doctype html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="タイトル">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="URL">
+    <meta property="og:image" content="画像">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:creator" content="クリエイター">
+    <link rel="stylesheet" href="./assets/css/station6.css" type="text/css" />
+    <title>Station 3</title>
+</head>
+
+<body>
+    <header></header>
+    <main>
+        <div class="card">
+            <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="サムネイル" />
+            <p class="card__title">タイトル</p>
+            <p class="card__description">Joseph Solomon</p>
+            <p class="card__description">420 mil visualizações • há 1 ano</p>
+        </div>
+    </main>
+    <footer></footer>
+</body>
+
+</html>
